# finance-agent

./: .gitignore  ACTION_DESCRIPTIONS_COMPLETE.md  ACTUAL_FIXES_SUMMARY.md  AGENT_BACKEND_TESTING_SUMMARY.md  AGENT_OPTIMIZATION_COMPLETE.md  AGENT_TEST_ANALYSIS.md  AGENT_UI_ENHANCEMENT_BRAINSTORM.md  ARGS_AND_PROGRESS_TEST_REPORT.md  ATOMIC_CARDS_TESTING_RESULTS.md  BEAUTIFUL_REDESIGN_COMPLETE.md  BROWSER_TESTING_ANALYSIS.md  BROWSER_TESTING_COMPLETE.md  BROWSER_TESTING_COMPLETE_SUMMARY.md  BUGS_FIXED.md  BUGS_FOUND.md  CHART_EXAMPLES.md  CHART_IMPLEMENTATION_SUMMARY.md  CHART_VISUALIZATION_GUIDE.md  CHECK_SERVICES.sh  COMPACT_CARDS_FINAL.md  COMPLETE_DEBUGGING_SESSION_SUMMARY.md  COMPONENTS_DOCUMENTATION.md  COMPREHENSIVE_AGENT_ANALYSIS.md  COMPREHENSIVE_FINDINGS.md  COMPREHENSIVE_TESTING_REPORT.md  COMPREHENSIVE_TESTING_SUMMARY.md  COMPREHENSIVE_TEST_RESULTS.md  CONTINUOUS_IMPROVEMENT_SUMMARY.md  COST_CALCULATION_VERIFICATION.md  CRITICAL_FINDINGS_TEST22-24.md  DEBUG_TOOL_COMPLETION.md  DESCRIPTION_BUG_INVESTIGATION.md  DESCRIPTION_FEATURE_TEST_RESULTS.md  DESCRIPTION_FIX_ANALYSIS.md  DESCRIPTION_FIX_COMPLETE.md  DESCRIPTION_FIX_SUMMARY.md  EXECUTION_ANALYSIS.md  FINAL_FIXES_COMPLETE.md  FINAL_IMPROVEMENTS_ANALYSIS.md  FINAL_IMPROVEMENTS_SUMMARY.md  (+113 more)
agent_service/: app.py  hooks.py  settings.py  tools_cli.py
frontend/: .gitignore  next.config.mjs  package-lock.json  package.json  pnpm-lock.yaml
logs/: cache_verification.json  description_test_1.json  description_test_2.json  description_test_3.json  description_test_4_complex.json  fix_test_1_margins.json  fixed_test_1_stock.json  fixed_test_2_chart.json  fixed_test_3_comparison.json  improved_test_1_math.json  improved_test_2_stock.json  improved_test_5_margins.json  sonnet_test_1.json  (+15 more)
(+258 files in other folders)
